# bunny2

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  main.py  pyproject.toml
bunny2/: db.py  plugins.py  transform.py
data/: config.toml
db/: urls.db  urls.sql
plugins/: __init__.py  _reflect.py  expansions.py  shorten.py
runtime/: bunny2.nginx  bunny2.nginx.tmpl  bunny2.systemd.tmpl  config.toml  config.toml.tmpl
