[tool.poetry]
name = "bunny2"
version = "0.1.0"
description = "flexible url shortener"
authors = ["abizer <abizer@abizer.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
toml = "^0.10.2"
databases = "^0.8.0"
aiosqlite = "^0.19.0"
sqlalchemy = {version = "1.4.42", extras = ["asyncio"]}


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
